Tela de Selecionar fotos pronta

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,9 @@
             android:ems="10"
             android:hint="Data de Nascimento"
             android:inputType="date"
-            android:textColorHint="@android:color/holo_red_dark" />
+            android:longClickable="false"
+            android:textColorHint="@android:color/holo_red_dark"
+            />
 
         <TextView
             android:id="@+id/textView2"
