--- a/app/src/main/res/layout/fragment_escolher_foto.xml
+++ b/app/src/main/res/layout/fragment_escolher_foto.xml
@@ -6,15 +6,14 @@
     android:orientation="vertical"
     tools:context=".EscolherFotoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <ImageView
         android:id="@+id/imagem"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
         />
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
@@ -23,12 +22,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_margin="8dp"
             android:text="não"/>
         <Button
             android:id="@+id/sim"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_margin="8dp"
             android:text="sim"/>
 
     </LinearLayout>
