Tela de Selecionar fotos pronta

--- a/app/src/main/res/layout/activity_laudo.xml
+++ b/app/src/main/res/layout/activity_laudo.xml
@@ -13,4 +13,11 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <Button
+        android:id="@+id/salvar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/laudo_lista"
+        android:text="Salvar"/>
+
 </RelativeLayout>
