--- a/app/src/main/res/layout/activity_exame.xml
+++ b/app/src/main/res/layout/activity_exame.xml
@@ -12,7 +12,8 @@
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="Exames"/>
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,4 +29,17 @@
         android:layout_height="fill_parent"
         android:layout_below="@id/tab_layout"
         android:id="@+id/exames_viewPager"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_exame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/text_margin"
+        android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginRight="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/text_margin"
+        android:src="@android:drawable/ic_input_add" />
 </RelativeLayout>
