--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -9,34 +9,45 @@
     <FrameLayout
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/tirar_foto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="8dp"
-        android:text="tirar"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/outline_camera_black_18dp"
+        android:background="@drawable/round_shape"
         />
-    <Button
+    <ImageButton
         android:id="@+id/preencher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="8dp"
-        android:text="ok"
+        android:layout_margin="32dp"
+        android:src="@drawable/check_black"
+        android:background="@drawable/round_shape"
+
         />
-    <Button
+    <ImageButton
         android:id="@+id/voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="8dp"
+        android:layout_margin="32dp"
         android:text="voltar"
+        android:src="@drawable/baseline_reply_black_18dp"
+        android:background="@drawable/round_shape"
+
         />
 
 </RelativeLayout>
