--- a/app/src/main/res/layout/activity_exame.xml
+++ b/app/src/main/res/layout/activity_exame.xml
@@ -41,5 +41,5 @@
         android:layout_marginEnd="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
         android:layout_marginBottom="@dimen/text_margin"
-        android:src="@android:drawable/ic_input_add" />
+        android:src="@drawable/add_white" />
 </RelativeLayout>
