--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
                 android:layout_marginTop="8dp"
                 android:hint="Senha..."
                 android:inputType="textPassword"
+                android:imeOptions="actionSend"
                 />
             <TextView
                 android:layout_width="wrap_content"
