--- a/app/src/main/res/menu/resumo_exame_menu.xml
+++ b/app/src/main/res/menu/resumo_exame_menu.xml
@@ -4,8 +4,9 @@
 
     <item
         android:id="@+id/confirmar_menu"
-        android:icon="@drawable/check_black"
+        android:icon="@drawable/check_white"
         android:title="Iniciar"
-        app:showAsAction="always"/>
+        app:showAsAction="always"
+        />
 
 </menu>
