--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -11,6 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/flash"
+        android:background="#fff"
+        android:visibility="gone"/>
+
     <ImageButton
         android:id="@+id/tirar_foto"
         android:layout_width="50dp"
