--- a/app/src/main/res/layout/activity_observacoes.xml
+++ b/app/src/main/res/layout/activity_observacoes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,10 +12,47 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:id="@+id/fab_create_audio"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="25dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        />
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/mic_white"/>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_create_text"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="25dp"
+        android:src="@drawable/create_white"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_close_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/clear_white"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_open_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/add_white"/>
+
+
+
+
 </RelativeLayout>
