--- a/app/src/main/res/layout/activity_fotos.xml
+++ b/app/src/main/res/layout/activity_fotos.xml
@@ -14,7 +14,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            />
+            android:visibility="gone"/>
     </FrameLayout>
 
 
