--- a/app/src/main/res/layout/activity_observacoes.xml
+++ b/app/src/main/res/layout/activity_observacoes.xml
@@ -3,55 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ObservacoesActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_create_audio"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="25dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/mic_white"/>
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_create_text"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="25dp"
-        android:src="@drawable/create_white"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_close_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/clear_white"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_open_menu"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fab_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        android:src="@drawable/add_white"/>
+        app:menu_backgroundColor="@android:color/transparent"
+        app:menu_icon="@drawable/add_white"
+        android:layout_margin="16dp">
 
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_texto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_size="mini"
+            app:fab_label="Texto"
+            android:src="@drawable/create_white"/>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_size="mini"
+            android:src="@drawable/mic_white"
+            app:fab_label="Áudio"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
 
 
 
