--- a/app/src/main/res/layout/exames_agendados_list.xml
+++ b/app/src/main/res/layout/exames_agendados_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.RecyclerView android:id="@+id/list"
+<androidx.recyclerview.widget.RecyclerView android:id="@+id/list"
     android:name="com.example.samuel.medimagem.ExameAgendadosFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
