--- a/app/src/main/res/layout/fragment_escolher_foto.xml
+++ b/app/src/main/res/layout/fragment_escolher_foto.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".EscolherFotoFragment">
 
-    <ImageView
-        android:id="@+id/imagem"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        />
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_gravity="center"
+        android:id="@+id/imagem_pager">
+
+    </androidx.viewpager.widget.ViewPager>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
         <Button
             android:id="@+id/nao"
             android:layout_width="0dp"
@@ -34,4 +36,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
