--- a/app/src/main/res/menu/fotos_menu.xml
+++ b/app/src/main/res/menu/fotos_menu.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/laudo"
-        android:icon="@drawable/check_black"
+        android:icon="@drawable/check_white"
         android:title="Próximo"
         app:showAsAction="always"
         />
