--- a/app/src/main/res/layout/observacoes_audio_card.xml
+++ b/app/src/main/res/layout/observacoes_audio_card.xml
@@ -33,6 +33,7 @@
         android:layout_margin="8dp"/>
 
     <SeekBar
+        android:id="@+id/audio_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/play_button"
