Gravacao Implementada; Fazer implementação para tocar áudio

--- a/app/src/main/res/layout/activity_observacoes.xml
+++ b/app/src/main/res/layout/activity_observacoes.xml
@@ -7,6 +7,7 @@
     tools:context=".ObservacoesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_observacoes"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
