--- a/app/src/main/res/drawable/border_card.xml
+++ b/app/src/main/res/drawable/border_card.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
+        android:width="0.5dp"
         android:color="#757575"
         />
-
+    <corners
+        android:radius="8dp"/>
 </shape>
