--- a/app/src/main/res/layout/gravar_audio_dialog.xml
+++ b/app/src/main/res/layout/gravar_audio_dialog.xml
@@ -1,47 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/dialog_gravar_audio"
-    android:orientation="horizontal"
-    android:layout_width="wrap_content"
+<LinearLayout android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:gravity="center">
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+
+    >
+
     <TextView
+        android:id="@+id/text_gravar_audio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Toque e segure no botão para gravar o áudio"/>
+        android:padding="24dp"
+        android:text="Segure o botão ao lado para gravar"
+        android:textSize="16dp"
+        android:layout_toLeftOf="@id/record_button"
+        android:layout_toStartOf="@id/record_button"/>
 
     <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/record_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:fab_size="mini"
-        android:id="@+id/recording_button"
+        android:layout_margin="8dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+
         android:src="@drawable/mic_white"/>
 
-
-</LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/record_button"
         android:orientation="horizontal"
-        android:layout_gravity="end">
+        android:layout_marginTop="8dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
         <Button
             android:id="@+id/cancelar_gravacao"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancelar"
-            style="?attr/buttonBarNegativeButtonStyle"/>
-    <Button
-        android:id="@+id/salvar_gravacao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="Salvar"
-        style="?attr/buttonBarPositiveButtonStyle"/>
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
+        <Button
+            android:id="@+id/salvar_gravacao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Salvar"
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
     </LinearLayout>
+
+</RelativeLayout>
 </LinearLayout>
