--- a/app/src/main/res/layout/observacoes_audio_card.xml
+++ b/app/src/main/res/layout/observacoes_audio_card.xml
@@ -7,22 +7,30 @@
     android:layout_marginBottom="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:background="@drawable/border_card">
+    android:background="@drawable/border_card"
+    android:elevation="1dp"
+    >
 
     <ImageView
         android:id="@+id/clear_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/clear_black"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@id/audio_seek_bar"/>
 
     <TextView
         android:id="@+id/titulo_observacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="6dp"
+        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingRight="8dp"
+        android:paddingEnd="8dp"
         android:text="Observação"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        />
 
     <ImageView
         android:id="@+id/play_button"
@@ -30,13 +38,17 @@
         android:layout_height="wrap_content"
         android:src="@drawable/play_black"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"/>
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_below="@id/titulo_observacao"
+        />
 
     <SeekBar
         android:id="@+id/audio_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/play_button"
+        android:layout_toEndOf="@id/play_button"
         android:layout_centerVertical="true"/>
 
 </RelativeLayout>
