Gravação e Reprodução Completa

--- a/app/src/main/res/layout/observacoes_audio_card.xml
+++ b/app/src/main/res/layout/observacoes_audio_card.xml
@@ -41,6 +41,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:layout_below="@id/titulo_observacao"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         />
 
     <SeekBar
